--- a/style.css
+++ b/style.css
@@ -39,21 +39,26 @@ header h1 {
 }
 
 nav ul {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
   list-style: none;
   padding: 0;
   margin: 20px 0 0;
-}
-
-nav ul li {
-  display: inline-block;
-  margin: 0 15px;
 }
 
 nav ul li a {
   color: #e0f2e9;
   text-decoration: none;
   font-weight: bold;
+  transition: color 0.3s ease;
 }
+
+nav ul li a:hover {
+  color: #fffa90;
+  text-decoration: underline;
+}
+
 
 .container {
   width: 90%;
@@ -125,4 +130,5 @@ footer {
 
 main.container {
   margin-top: 200px;
+  padding-top: 20px;
 }
