--- a/style.css
+++ b/style.css
@@ -132,3 +132,7 @@ main.container {
   margin-top: 200px;
   padding-top: 20px;
 }
+
+section {
+  scroll-margin-top: 120px; /* ヘッダーの高さと同じか少し大きめ */
+}
